--- a/IoC.Spring.Container/IoC.Spring.Container/Web.config
+++ b/IoC.Spring.Container/IoC.Spring.Container/Web.config
@@ -1,9 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
-  https://go.microsoft.com/fwlink/?LinkId=301880
-  -->
 <configuration>
+  <configSections>
+    <sectionGroup name="spring">
+      <section name="context" type="Spring.Context.Support.ContextHandler, Spring.Core" />
+      <section name="objects" type="Spring.Context.Support.DefaultSectionHandler, Spring.Core" />
+    </sectionGroup>
+  </configSections>
+  <spring>
+    <context>
+      <resource uri="config://spring/objects" />
+    </context>
+    <objects xmlns="http://www.springframework.net">
+      <object name="UsuariosRepository" type="IoC.Spring.Container.Repositories.UsuariosRepository, IoC.Spring.Container.Repositories" singleton="false" />
+      <object name="UsuariosService" type="IoC.Spring.Container.Services.UsuariosService, IoC.Spring.Container.Services" singleton="false">
+        <constructor-arg ref="UsuariosRepository" />
+      </object>
+      <object name="HomeController" type="IoC.Spring.Container.Controllers.HomeController, IoC.Spring.Container" singleton="false">
+        <property name="UsuariosService" ref="UsuariosService" />
+      </object>    
+    </objects>
+  </spring>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
