--- a/IoC.Spring.Container/IoC.Spring.Container/packages.config
+++ b/IoC.Spring.Container/IoC.Spring.Container/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="Common.Logging" version="3.0.0" targetFramework="net461" />
+  <package id="Common.Logging.Core" version="3.0.0" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
@@ -26,5 +28,7 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="Spring.Aop" version="2.0.1" targetFramework="net461" />
+  <package id="Spring.Core" version="2.0.1" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
