--- a/IoC.Spring.Container/IoC.Spring.Container.Services/IoC.Spring.Container.Services.csproj
+++ b/IoC.Spring.Container/IoC.Spring.Container.Services/IoC.Spring.Container.Services.csproj
@@ -30,8 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=7.0.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.7.0.1\lib\net45\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Business\AutoMapperModelConfiguration.cs" />
+    <Compile Include="Business\UsuarioProfile.cs" />
     <Compile Include="Interfaces\IUsuariosService.cs" />
     <Compile Include="UsuariosService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -53,6 +62,9 @@
       <Project>{F95063F9-2FAD-47DE-89C2-33268A38EB3C}</Project>
       <Name>IoC.Spring.Container.Repositories</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
