--- a/IoC.Spring.Container/IoC.Spring.Container/packages.config
+++ b/IoC.Spring.Container/IoC.Spring.Container/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
+  <package id="AutoMapper" version="7.0.1" targetFramework="net461" />
   <package id="bootstrap" version="4.1.3" targetFramework="net461" />
   <package id="Common.Logging" version="3.0.0" targetFramework="net461" />
   <package id="Common.Logging.Core" version="3.0.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="3.0.0" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
@@ -31,5 +33,10 @@
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="Spring.Aop" version="2.0.1" targetFramework="net461" />
   <package id="Spring.Core" version="2.0.1" targetFramework="net461" />
+  <package id="System.Data.SQLite" version="1.0.109.1" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.109.1" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6" version="1.0.109.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Linq" version="1.0.109.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
